# fastapi-do-zero

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  flake.nix  pyproject.toml
app/: app.py
scripts/: bootstrap  build  format  lint  setup  start  start-api  test  update  watch
tests/: test_app.py
