[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rodrigo Ferreira de Souza <rodfersou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-beeprint = "^0.1.2"

[tool.ruff]
line-length = 100
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings --cov=app -vv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
